# car-data

./: .gitignore  Cargo.toml  LICENSE  README.md  setup.py
car_data/: constants.py  dataset.py  graphics.py  lin_features.py  losses.py  model.py  train_loop.py
car_data/scripts/: baseline.py  classify.py  classify_viz.py  classify_viz_animate.py  clip_features.py  data_bench.py  data_viz.py  filter_index.py  plot_runs.py  recalibrate.py  train.py  train_distill.py  train_filter.py
src/: chan_util.rs  db.rs  dedup_images.rs  export_data.rs  image_util.rs  kbb.rs  main.rs  make_models.rs  parse_util.rs  scrape_kbb.rs  task_queue.rs  types.rs
