[package]
name = "car-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "3.2.20", features=["derive"] }
reqwest = { version="0.11.11", default-features = false, features = ["rustls-tls-native-roots"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
scraper = { version="0.13.0" }
serde_json = { version="1.0" }
sha2 = { version="0.10.6" }
tokio = { version = "1.20.1", features=["full"] }